Resolve horizontal scroll bug, text narrowing issue

--- a/style.css
+++ b/style.css
@@ -643,8 +643,6 @@ h3 {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    overflow: hidden;
-    
 }
 
 #three-paths {
@@ -677,6 +675,7 @@ h3 {
 .worker-text {
     display: flex;
     flex-direction: column;
+    width: 100%;
     height: 100%;
     text-align: center;
     justify-content: center;
@@ -717,6 +716,8 @@ h3 {
     body {
         padding-left: 5%;
         padding-right: 5%;
+        max-width: 100%;
+        overflow-x: hidden;
     }
 
     h2 { font-size: 35px; }
